@@ -1,3 +1,8 @@
+2006-11-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/GParted_Core.cc: fixed rare bug with modifying logical
+	  partitions. (#368199)
+
 2006-11-23 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* configure.in: fixed issue with libparted detection (#330776)
